--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     height: 209px;
-    width: auto;
+    width: 100%;
     font-size: 24px;
     font-weight: 500;
 }
