--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0px;
+}
+
 .Home {
     margin-left: 100px;
     margin-right: 100px;
@@ -9,7 +13,16 @@
 
 .Banner {
     display: flex;
-    background: rgb(0 0 0 / 25%);
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.55), 
+        rgba(0, 0, 0, 0.55)
+      ),
+      url("../assets/HomeBackground.png");
+    width: 100%;
+    height: 223px;
+    border-radius: 25px;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    background-size: cover;
     justify-content: center;
     align-items: center;
     font-family: 'Montserrat';
@@ -17,12 +30,23 @@
     font-size: 48px;
     color: white;
     margin-bottom: 43px;
-
+    background-position: center center;
+    mix-blend-mode: darken;
 }
 
 .Gallery {
+    width: 1240px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin-bottom: 50px;
+    justify-content: space-around;
+    align-content: space-around;
+    background-color: #F6F6F6;
+    border-radius: 25px;
+    padding-top: 56px;
+}
+
+.Card {
     margin-bottom: 50px;
 }
