--- a/src/styles/APropos.css
+++ b/src/styles/APropos.css
@@ -23,3 +23,20 @@
     display: flex;
     flex-direction: column;
 }
+
+@media (max-width: 767.98px) {
+    .APropos {
+        max-width: 768px;
+        width: calc(100% - 40px);
+        margin: 0px;
+    }
+
+    .BannerImg {
+        height: 111px;
+        border-radius: 10px;
+    }
+
+    .MainAPropos {
+        margin: 0px;
+    }
+}
