--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -6,3 +6,19 @@
     font-size: 18px;
     color: white;
 }
+
+.Card {
+    display: flex;
+    align-items: flex-end;
+    width: 340px;
+    height: 340px;
+    background-size: cover;
+    border-radius: 10px;
+}
+
+@media (max-width: 767.98px) {
+    .Card {
+        width: 335px;
+        height: 255px;
+    }
+}
