--- a/src/styles/Carrousel.css
+++ b/src/styles/Carrousel.css
@@ -23,3 +23,35 @@
     color: white;
     font-size: 79px;
 }
+
+.imageCounter {
+    display: flex;
+    align-items: flex-end;
+    height: 100%;
+    padding-bottom: 25px;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 18px;
+    color: white;
+}
+
+@media (max-width: 767.98px) {
+    .carrousel {
+        max-width: 768px;
+        width: 100%;
+        height: 255px;
+        border-radius: 10px;
+    }
+
+    .carrouselPrev {
+        font-size: 20px;
+    }
+
+    .carrouselNext {
+        font-size: 20px;
+    }
+
+    .imageCounter {
+        font-size: 12px;
+    }
+}
