--- a/src/styles/Collapse.css
+++ b/src/styles/Collapse.css
@@ -7,14 +7,14 @@
     font-size: 18px;
     background-color: #F6F6F6;
     margin-bottom: 30px;
-
+    border-radius: 5px;
 }
 
 .CollapseButton {
     width: 100%;
-    height: 54px;
+    height: 52px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     border: 0px;
     border-radius: 5px;
@@ -23,8 +23,32 @@
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 24px;
+    padding-left: 10px;
+    padding-right: 20px;
 }
 
-.CollapseBody p {
-    margin-left: 10px;
+.collapseList {
+    padding-left: 15px;
+    padding-right: 15px;
 }
+
+ul {
+    list-style-type: none;
+    padding-left: 0px;
+    padding-right: 0px;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 18px;
+  }
+
+  @media (max-width: 767.98px) {
+    .CollapseButton {
+        height: 30px;
+        font-size: 13px;
+    }
+
+    ul {
+        font-size: 12px;
+    }
+    
+  }
