--- a/src/styles/FicheLogement.css
+++ b/src/styles/FicheLogement.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 25px;
     width: 100%;
     justify-content: center;
 }
@@ -19,11 +18,11 @@
     width: 1240px;
 }
 
-.titleandhostLogements {
+.infoLogements {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 30px;
+    margin-top: 24px;
 }
 
 .titleLogements h1 {
@@ -34,7 +33,7 @@
     margin: 0px;
 }
 
-p {
+.titleLogements p {
     margin: 0px;
     font-family: "Montserrat";
     font-weight: 500;
@@ -47,6 +46,7 @@ p {
     justify-content: center;
     align-items: center;
     gap: 10px;
+    margin-bottom: 21px;
 }
 
 .Host p {
@@ -59,6 +59,7 @@ p {
     border-radius: 50%;
 }
 
+
 .tagsLogements {
     display: flex;
     flex-direction: row;
@@ -68,7 +69,7 @@ p {
 }
 
 .Tag {
-    width: 115px;
+    width: 125px;
     height: 25px;
     border-radius: 10px;
     background-color: #ff6060;
@@ -79,4 +80,98 @@ p {
     font-family: 'Montserrat';
     font-weight: 700;
     font-size: 14px;
+}
+
+.collapsesLogements {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.collapsesLogements .totalCollapse {
+    width: 582px;
+}
+
+@media (max-width: 767.98px) {
+    .FicheLogement {
+        max-width: 768px;
+        width: calc(100% - 40px);
+        margin-bottom: 0px;
+    }
+
+    .carrouselImages {
+        width: 100%;
+        height: 255px;
+    }
+
+    .mainLogements {
+        max-width: 768px;
+        width: 100%;
+    }
+
+    .infoLogements {
+        flex-direction: column;
+    }
+
+    .HostandRatings {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 13px;
+    }
+
+    .Host {
+        margin-bottom: 0px;
+    }
+
+    .Host img {
+        height: 32px;
+        width: 32px;
+    }
+
+    .Host p {
+        font-size: 12px;
+        margin: 0px;
+    }
+
+    .ratingsLogements img {
+        height: 18px;
+        width: 18px;
+    }
+
+    .collapsesLogements {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .collapsesLogements .totalCollapse {
+        width: 100%;
+    }
+
+    .titleLogements {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .titleLogements h1 {
+        font-size: 18px;
+    }
+
+    .titleLogements p {
+        font-size: 14px;
+    }
+
+    .tagsLogements {
+        margin-top: 10px;
+        margin-bottom: 16px;
+    }
+
+    .Tag {
+        height: 18px;
+        width: 90px;
+        font-size: 10px;
+        border-radius: 5px;
+    }
 }
