--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,15 +3,43 @@
     flex-direction: row;
     justify-content: space-between;
     margin: 45px 100px 50px 100px;
+    width: 1240px;
 }
 
 nav {
     width: 300px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: flex-end;
+    gap: 57px;
+    align-items: center;
+}
+
+nav a {
+    color:black;
     font-family: 'Montserrat';
     font-weight: 500;
     font-size: 24px;
-    align-items: center;
+}
+
+@media (max-width: 767.98px) {
+    .Header {
+        max-width: 768px;
+        width: 335px;
+        margin: 20px 20px 27px 20px;
+
+    }
+
+    nav {
+        gap: 26px;
+    }
+
+    nav a {
+        font-size: 12px;
+    }
+
+    .Header img {
+        width: 145px;
+        height: 47px;
+    }
 }
