--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,7 +1,3 @@
-body {
-    margin: 0px;
-}
-
 .Home {
     margin-left: 100px;
     margin-right: 100px;
@@ -35,18 +31,42 @@ body {
 }
 
 .Gallery {
-    width: 1240px;
+    width: 1140px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     margin-bottom: 50px;
-    justify-content: space-around;
-    align-content: space-around;
     background-color: #F6F6F6;
     border-radius: 25px;
-    padding-top: 56px;
+    padding: 56px 50px 43px 50px;
+    gap: 60px;
+    row-gap: 50px;
 }
 
-.Card {
-    margin-bottom: 50px;
+@media (max-width: 767.98px) {
+    .Home {
+        margin-left: 20px;
+        margin-right: 20px;
+        max-width: 728px;
+        width: calc(100% - 40px);
+    }
+    
+    .Banner {
+        max-width: 728px;
+        width: 100%;
+        height: 111px;
+        border-radius: 10px;
+        font-size: 24px;
+    }
+
+    .Gallery {
+        background-color: white;
+        padding: 0px;
+        flex-direction: column;
+        width: 100%;
+        flex-wrap: nowrap;
+        gap: 20px;
+    }
+
+    
 }
