--- a/public/index.scss
+++ b/public/index.scss
@@ -1,3 +1,35 @@
 $main-margin: 100px;
-$main-font: 'Montserrat'
-$main-color: #FF6060 ;
+$main-font: Montserrat;
+$main-color: #FF6060;
+
+
+#root {
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 1440px;
+
+    @media (max-width: 767.98px) {
+        width: 100%;
+        max-width: 768px;
+    }
+}
+
+body {
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+    @media (max-width: 767.98px) {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+a {
+    text-decoration: none;
+}
