--- a/src/styles/Carrousel.scss
+++ b/src/styles/Carrousel.scss
@@ -1,3 +1,5 @@
+@use "../../public/index.scss" as i;
+
 .carrousel {
     width: 1240px;
     height: 415px;
@@ -8,6 +10,13 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 25px;
+
+    @media (max-width: 767.98px) {
+        max-width: 768px;
+        width: 100%;
+        height: 255px;
+        border-radius: 10px;
+    }
 }
 
 .carrouselPrev {
@@ -15,6 +24,10 @@
     border: 0px;
     color: white;
     font-size: 79px;
+
+    @media (max-width: 767.98px) {
+        font-size: 20px;
+    }
 }
 
 .carrouselNext {
@@ -22,6 +35,10 @@
     border: 0px;
     color: white;
     font-size: 79px;
+
+    @media (max-width: 767.98px) {
+        font-size: 20px;
+    }
 }
 
 .imageCounter {
@@ -29,29 +46,12 @@
     align-items: flex-end;
     height: 100%;
     padding-bottom: 25px;
-    font-family: 'Montserrat';
+    font-family: i.$main-font;
     font-weight: 500;
     font-size: 18px;
     color: white;
-}
 
-@media (max-width: 767.98px) {
-    .carrousel {
-        max-width: 768px;
-        width: 100%;
-        height: 255px;
-        border-radius: 10px;
-    }
-
-    .carrouselPrev {
-        font-size: 20px;
-    }
-
-    .carrouselNext {
-        font-size: 20px;
-    }
-
-    .imageCounter {
+    @media (max-width: 767.98px) {
         font-size: 12px;
     }
 }
