--- a/src/styles/Collapse.scss
+++ b/src/styles/Collapse.scss
@@ -1,8 +1,10 @@
+@use "../../public/index.scss" as i;
+
 .CollapseBody {
     transition-property: height;
     transition-duration: 200ms;
     overflow: hidden;
-    font-family: 'Montserrat';
+    font-family: i.$main-font;
     font-weight: 500;
     font-size: 18px;
     background-color: #F6F6F6;
@@ -18,13 +20,18 @@
     align-items: center;
     border: 0px;
     border-radius: 5px;
-    background-color: #FF6060;
+    background-color: i.$main-color;
     color: #FFFFFF;
-    font-family: 'Montserrat';
+    font-family: i.$main-font;
     font-weight: 700;
     font-size: 24px;
     padding-left: 10px;
     padding-right: 20px;
+
+    @media (max-width: 767.98px) {
+        height: 30px;
+        font-size: 13px;
+    }
 }
 
 .collapseList {
@@ -36,19 +43,11 @@ ul {
     list-style-type: none;
     padding-left: 0px;
     padding-right: 0px;
-    font-family: 'Montserrat';
+    font-family: i.$main-font;
     font-weight: 500;
     font-size: 18px;
-  }
 
-  @media (max-width: 767.98px) {
-    .CollapseButton {
-        height: 30px;
-        font-size: 13px;
-    }
-
-    ul {
+    @media (max-width: 767.98px) {
         font-size: 12px;
     }
-    
   }
