--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,21 +1,27 @@
+@use "../../public/index.scss" as i;
+
 .Footer {
     display: flex;
     color: white;
     background-color: black;
-    font-family: 'Montserrat';
+    font-family: i.$main-font;
     flex-direction: column;
     align-items: center;
     height: 209px;
     width: 100%;
     font-size: 24px;
     font-weight: 500;
-}
 
-.Footer img {
-    height: 40px;
-    width: 122px;
-    margin-bottom: 28px;
-    margin-top: 66px;
+    @media (max-width: 767.98px) {
+        font-size: 12px;
+    }
+
+    img {
+        height: 40px;
+        width: 122px;
+        margin-bottom: 28px;
+        margin-top: 66px;
+    }
 }
 
 #footerText {
@@ -24,11 +30,3 @@
     margin-bottom: 29px;
     margin-top: 0px;
 }
-
-@media (max-width: 767.98px) {
-    .Footer {
-        font-size: 12px;
-
-    }
-}
-    
