--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,9 +1,18 @@
+@use "../../public/index.scss" as i;
+
 .Home {
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: i.$main-margin;
+    margin-right: i.$main-margin;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @media (max-width: 767.98px) {
+        margin-left: 20px;
+        margin-right: 20px;
+        max-width: 728px;
+        width: calc(100% - 40px);
+    }
 
 }
 
@@ -21,13 +30,21 @@
     background-size: cover;
     justify-content: center;
     align-items: center;
-    font-family: 'Montserrat';
+    font-family: i.$main-font;
     font-weight: 700;
     font-size: 48px;
     color: white;
     margin-bottom: 43px;
     background-position: center center;
     mix-blend-mode: darken;
+
+    @media (max-width: 767.98px) {
+        max-width: 728px;
+        width: 100%;
+        height: 111px;
+        border-radius: 10px;
+        font-size: 24px;
+    }
 }
 
 .Gallery {
@@ -41,25 +58,8 @@
     padding: 56px 50px 43px 50px;
     gap: 60px;
     row-gap: 50px;
-}
 
-@media (max-width: 767.98px) {
-    .Home {
-        margin-left: 20px;
-        margin-right: 20px;
-        max-width: 728px;
-        width: calc(100% - 40px);
-    }
-    
-    .Banner {
-        max-width: 728px;
-        width: 100%;
-        height: 111px;
-        border-radius: 10px;
-        font-size: 24px;
-    }
-
-    .Gallery {
+    @media (max-width: 767.98px) {
         background-color: white;
         padding: 0px;
         flex-direction: column;
@@ -67,6 +67,5 @@
         flex-wrap: nowrap;
         gap: 20px;
     }
-
-    
 }
+
