--- a/public/index.scss
+++ b/public/index.scss
@@ -9,7 +9,8 @@ $main-color: #FF6060;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    width: 1440px;
+    width: 100%;
+    max-width: 1440px;
 
     @media (max-width: 767.98px) {
         width: 100%;
@@ -22,6 +23,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 
 
     @media (max-width: 767.98px) {
