--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -12,13 +12,13 @@
 .Card {
     display: flex;
     align-items: flex-end;
-    width: 340px;
+    width: 100%;
     height: 340px;
     background-size: cover;
     border-radius: 10px;
 
     @media (max-width: 767.98px) {
-        width: 335px;
+        width: 100%;
         height: 255px;
     }
 }
