--- a/src/styles/Carrousel.scss
+++ b/src/styles/Carrousel.scss
@@ -1,7 +1,7 @@
 @use "../../public/index.scss" as i;
 
 .carrousel {
-    width: 1240px;
+    width: 100%;
     height: 415px;
     background-size: cover;
     background-position: center center;
