--- a/src/styles/FicheLogement.scss
+++ b/src/styles/FicheLogement.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 25px;
-    width: 100%;
+    width: calc(100% - 200px);
     justify-content: center;
 
     @media (max-width: 767.98px) {
@@ -17,7 +17,7 @@
 
 .carrouselImages {
     display: flex;
-    width: 1240px;
+    width: 100%;
     height: 415px;
     justify-content: center;
 
@@ -28,7 +28,7 @@
 }
 
 .mainLogements {
-    width: 1240px;
+    width: 100%;
 
     @media (max-width: 767.98px) {
         max-width: 768px;
@@ -44,6 +44,14 @@
 
     @media (max-width: 767.98px) {
         flex-direction: column;
+    }
+
+    .TitleandTags {
+        width: 51%;
+
+        @media (max-width: 767.98px) {
+            width: 100%;
+        }
     }
 }
 
@@ -177,7 +185,15 @@
     }
 
     .totalCollapse {
-        width: 582px;
+        width: 100%;
+
+        @media (max-width: 767.98px) {
+            width: 100%;
+        }
+    }
+
+    .collapseDiv {
+        width: 47%;
 
         @media (max-width: 767.98px) {
             width: 100%;
