--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -5,11 +5,11 @@
     flex-direction: row;
     justify-content: space-between;
     margin: 45px i.$main-margin 50px i.$main-margin;
-    width: 1240px;
+    width: calc(100% - 200px);
 
     @media (max-width: 767.98px) {
         max-width: 768px;
-        width: 335px;
+        width: calc(100% - 40px);
         margin: 20px 20px 27px 20px;
     }
 
