--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: calc(100% - 200px);
 
     @media (max-width: 767.98px) {
         margin-left: 20px;
@@ -48,7 +49,7 @@
 }
 
 .Gallery {
-    width: 1140px;
+    width: calc(100% - 100px);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -66,6 +67,14 @@
         width: 100%;
         flex-wrap: nowrap;
         gap: 20px;
+    }
+
+    a {
+        width: calc(33% - 40px);
+
+        @media (max-width: 767.98px) {
+            width: 100%;
+        }
     }
 }
 
